--- a/.dwp/project-metadata.yaml
+++ b/.dwp/project-metadata.yaml
@@ -9,8 +9,8 @@ project:
     version: 2-3-0
 
     last_verified:
-      date: "2023-08-16"
-      name: "@fiona.evans"
+      date: "2023-09-07"
+      name: "@charlie.mccabe"
 
     tags:
       payments: false
