--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GITLAB_IMAGE=null
 LOCALSTACK_IMAGE=localstack/localstack:0.12.20
 MONGO_IMAGE=mongo:5.0
-MAVEN_IMAGE=maven:3-jdk-11
+MAVEN_IMAGE=maven:3-openjdk-17
 MOCK_IMAGE=431469937388.dkr.ecr.eu-west-2.amazonaws.com/pip-apply/pip-apply-mocks:develop-6a01ce98
 MVN_OPTS=-DLOG_LEVEL=INFO
 MVN_CLI_OPTS=--batch-mode
