--- a/.dwp/project-metadata.yaml
+++ b/.dwp/project-metadata.yaml
@@ -6,11 +6,11 @@ project:
   - project_id: 28972556
     component_name: ms-application-manager
 
-    version: 2.6.0
+    version: 2.8.0
 
     last_verified:
-      date: "2023-10-20"
-      name: "@alfred.akligo"
+      date: "2024-01-09"
+      name: "@nick.preece"
 
     tags:
       payments: false
