--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.4</version>
+        <version>3.3.3</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>uk.gov.dwp.health.pip</groupId>
     <artifactId>ms-application-manager</artifactId>
-    <version>2.15.0</version>
+    <version>2.19.3</version>
     <name>ms-pip-application-manager</name>
     <description>Strategic pip-apply micro service handle applicant application</description>
 
@@ -24,62 +24,62 @@
         <client.base.package.name>uk.gov.dwp.health.pip.application.manager</client.base.package.name>
         <dwp.encoded.log.version>2.2.3-112b45f6</dwp.encoded.log.version>
         <mongock.version>4.3.8</mongock.version>
-        <message-broker-integration-autoconfigure.version>3.4.0-bd00860c</message-broker-integration-autoconfigure.version>
+        <message-broker-integration-autoconfigure.version>3.6.0-bb5743b9</message-broker-integration-autoconfigure.version>
         <dwp-mongo-change-stream-starter.version>4.2.0-359f3f54</dwp-mongo-change-stream-starter.version>
         <dwp-meta-data-logger.version>2.0.0-f17eb705</dwp-meta-data-logger.version>
         <gson-fire.version>1.9.0</gson-fire.version>
-        <pipcs-api-model.version>1.4.0-4dc49bf8</pipcs-api-model.version>
+        <pipcs-api-model.version>1.5.0-a8b84872</pipcs-api-model.version>
 <!--        Added spring web ref to upgrade beyond a vulnerability in 6.1.5 -->
-        <spring-web.version>6.1.6</spring-web.version>
-        <guava.version>33.1.0-jre</guava.version>
-        <swagger-annotations.version>2.2.20</swagger-annotations.version>
-        <swagger-parser.version>2.1.19</swagger-parser.version>
+        <spring-web.version>6.1.12</spring-web.version>
+        <spring.core.version>6.1.12</spring.core.version>
+        <guava.version>33.3.0-jre</guava.version>
+        <swagger-annotations.version>2.2.22</swagger-annotations.version>
+        <swagger-parser.version>2.1.22</swagger-parser.version>
         <openapi-codegen-maven-plugin.version>6.6.0</openapi-codegen-maven-plugin.version>
         <jackson-nullable.version>0.2.6</jackson-nullable.version>
         <amazon.sdk.version>1.12.567</amazon.sdk.version>
         <lidalia.version>1.2.0</lidalia.version>
-        <plugin.maven.compiler.version>3.11.0</plugin.maven.compiler.version>
-        <plugin.spotbugs.version>4.7.3.0</plugin.spotbugs.version>
-        <spotbugs.version>4.7.3</spotbugs.version>
-        <plugin.maven.owasp.version>10.0.2</plugin.maven.owasp.version>
-        <plugin.maven.jacoco.version>0.8.8</plugin.maven.jacoco.version>
-        <plugin.projectinfo.version>3.1.1</plugin.projectinfo.version>
-        <plugin.surefire.version>3.0.0-M7</plugin.surefire.version>
-        <plugin.pmd.version>3.14.0</plugin.pmd.version>
-        <plugin.jxr.version>3.0.0</plugin.jxr.version>
-        <plugin.pitest.version>1.9.2</plugin.pitest.version>
-        <plugin.maven.checkstyle.version>10.7.0</plugin.maven.checkstyle.version>
-        <plugin-checkstyle-parent.version>3.2.0</plugin-checkstyle-parent.version>
-        <plugin.pitest.version>1.9.2</plugin.pitest.version>
-        <plugin.pitest.junit5.version>1.1.0</plugin.pitest.junit5.version>
-        <plugin.exec-maven.version>1.6.0</plugin.exec-maven.version>
+        <plugin.maven.compiler.version>3.13.0</plugin.maven.compiler.version>
+        <plugin.spotbugs.version>4.8.6.3</plugin.spotbugs.version>
+        <spotbugs.version>4.8.6</spotbugs.version>
+        <plugin.maven.owasp.version>10.0.4</plugin.maven.owasp.version>
+        <plugin.maven.jacoco.version>0.8.12</plugin.maven.jacoco.version>
+        <plugin.projectinfo.version>3.7.0</plugin.projectinfo.version>
+        <plugin.surefire.version>3.5.0</plugin.surefire.version>
+        <plugin.pmd.version>3.25.0</plugin.pmd.version>
+        <plugin.jxr.version>3.5.0</plugin.jxr.version>
+        <plugin.pitest.version>1.16.3</plugin.pitest.version>
+        <plugin.maven.checkstyle.version>10.18.1</plugin.maven.checkstyle.version>
+        <plugin-checkstyle-parent.version>3.5.0</plugin-checkstyle-parent.version>
+        <plugin.pitest.junit5.version>1.2.1</plugin.pitest.junit5.version>
+        <plugin.exec-maven.version>3.4.1</plugin.exec-maven.version>
         <plugin.jsonschema2pojo-maven.version>1.2.1</plugin.jsonschema2pojo-maven.version>
         <easy-random-core.version>5.0.0</easy-random-core.version>
         <testTags>unit</testTags>
-        <flapdoodle.version>4.6.2</flapdoodle.version>
-        <restassured.version>5.3.2</restassured.version>
-        <restassured.extent.report.plugin.version>2.1.2</restassured.extent.report.plugin.version>
+        <flapdoodle.version>4.11.0</flapdoodle.version>
+        <restassured.version>5.5.0</restassured.version>
+        <restassured.extent.report.plugin.version>2.2.0</restassured.extent.report.plugin.version>
         <qa-tools-properties.version>2.0.RC6</qa-tools-properties.version>
-        <allure.version>2.24.0</allure.version>
+        <allure.version>2.29.0</allure.version>
         <extentreport-allure-annotation.version>1.0.2</extentreport-allure-annotation.version>
         <java-faker.version>1.0.2</java-faker.version>
         <snakeyaml.version>2.0</snakeyaml.version>
-        <micrometer.version>1.12.2</micrometer.version>
+        <micrometer.version>1.13.3</micrometer.version>
         <opentelemetry.version>2.0.0-alpha</opentelemetry.version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
-        <opentelemetry-bom.version>1.34.1</opentelemetry-bom.version>
+        <opentelemetry-bom.version>1.41.0</opentelemetry-bom.version>
         <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
-        <spring-web.version>6.1.6</spring-web.version>
         <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
-        <netty-codec-http.version>4.1.108.Final</netty-codec-http.version>
-        <classgraph.version>4.8.174</classgraph.version>
+        <netty-codec-http.version>4.1.113.Final</netty-codec-http.version>
+        <classgraph.version>4.8.175</classgraph.version>
+        <jackson.databind.version>2.17.2</jackson.databind.version>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
-                <version>2.17.0</version>
+                <version>2.17.2</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -128,12 +128,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--        Added spring web ref to upgrade beyond a vulnerability in 6.1.5 -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring-web.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -141,6 +135,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.cloudyrock.mongock</groupId>
@@ -155,6 +154,7 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer.version}</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
@@ -189,6 +189,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
