--- a/.dwp/project-metadata.yaml
+++ b/.dwp/project-metadata.yaml
@@ -3,10 +3,10 @@ schema_version: 1.0.0
 project:
   - project_id: 28972556
     component_name: ms-application-manager
-    version: 2.19.3
+    version: 2.21.0
     last_verified:
-      date: "2024-10-18"
-      name: "@kevin.monteiro"
+      date: "2025-01-08"
+      name: "@mikael.alisson"
     tags:
       payments: false
       personally_identifying_information: true
